Add SmartFactory 360 authentication and profile features